<resources>
    <string name="app_name">MvpApp</string>
    <string name="login_title_name">Login</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="login">sign in</string>
    <string name="register">sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rio_phan">Rio phan</string>
    <string name="name">name</string>
    <string name="gender">gender</string>
</resources>
