<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_toolbar">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <TextView
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:text="@string/login_title_name"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1111111111"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:hint="@string/phone"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                android:layout_marginBottom="@dimen/_10sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="111111"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_server_login"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@android:color/holo_red_light"
                android:padding="10dp"
                android:text="@string/login"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_register"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:text="@string/register"
                android:textSize="18dp" />


            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="bottom|center"-->
                <!--android:layout_marginTop="@dimen/_10sdp"-->
                <!--android:layout_marginBottom="@dimen/_20sdp"-->
                <!--android:orientation="horizontal">-->

                <!--<ImageButton-->
                    <!--android:id="@+id/ib_google_login"-->
                    <!--android:layout_width="40dp"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:background="@color/transparent"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--app:srcCompat="@drawable/ic_google_plus" />-->

                <!--<ImageButton-->
                    <!--android:id="@+id/ib_fb_login"-->
                    <!--android:layout_width="40dp"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:layout_marginLeft="24dp"-->
                    <!--android:background="@color/transparent"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--app:srcCompat="@drawable/ic_facebook" />-->
            <!--</LinearLayout>-->

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
